# scaffolding-v3

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: default.yaml
_weights/era5/: cfg.yaml
src/config/: base.yaml  config.py
src/config/data/: cifar10.yaml  mnist.yaml
src/config/mode/: dev.yaml
src/data_processing/: dwd.py  era5.py  srtm_dem.py
src/exploration/: check_val_loss.py  checkpoints.py  compare_datasets.py  evaluate.py  evaluation.py  evaluation_plots.py  find_hardest.py  interpolation.py  multiple_workers.py  offgrid_plots.py  toms_script.py
src/explore/: config_filters.py  find_hardest.py
src/scaffolding_v3/: config.py  evaluate.py  instantiate.py  train.py
src/scaffolding_v3/data/: cifar10.py  data.py  dataprovider.py  dataset.py  dwd.py  elevation.py  era5.py  mnist.py
src/scaffolding_v3/data/data_processing/: dwd.py  srtm_dem.py
src/scaffolding_v3/model/: classification.py
src/scaffolding_v3/model/backbone/: convnet.py
src/scaffolding_v3/models/: convnet.py
src/scaffolding_v3/plot/: gridded.py  offgrid.py  plot.py  plotter.py  util.py
src/scaffolding_v3/util/: config_filter.py  explore.py  instantiate.py
src/scripts/: find_hardest.py
tests/: test_cfg.py  test_train.py
