[project]
name = "scaffolding-v3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Jonas Scholz", email = "jonas.scholz123@gmail.com" }]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.66.4",
    "matplotlib>=3.9.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.2",
    "wandb>=0.17.5",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "geopandas>=1.0.1",
    "pyarrow>=17.0.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "deepsensor>=0.3.8",
    "xarray>=2024.7.0",
    "rioxarray>=0.17.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../mlbnb#egg=mlbnb",
]
